add resetpassword Handler
