# internal/api/router/execs_router.go
@@ -20,5 +20,5 @@ func execsRouter(mux *http.ServeMux) {
 	mux.HandleFunc("POST /execs/login", handlers.LoginHandler)
 	mux.HandleFunc("POST /execs/logout", handlers.LogoutHandler)
 	mux.HandleFunc("POST /execs/forgotpassword", handlers.ForgotPasswordHandler)
-	// mux.HandleFunc("POST /execs/resetpassword/reset/{resetcode}", handlers.ExecsHandler)
+	mux.HandleFunc("POST /execs/resetpassword/reset/{resetcode}", handlers.ResetPasswordHandler)
 }
